# dttb

./: .coverage  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/skills/dttb/: SKILL.md
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
docs/: api.md  index.md  installation.md  usage.md
src/dttb/: __init__.py
tests/: test_dttb.py
