[project]
name = "dttb"
version = "0.1.0"
description = "DateTime TraceBack"
readme = "README.md"
authors = [
    { name = "Rocky Haotian Du", email = "2712479005@qq.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
