[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dttb"
version = "0.3.1rc1"
description = "DateTime TraceBack"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rocky Haotian Du", email = "2712479005@qq.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Repository = "https://github.com/rocky-d/dttb"

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "pyyaml>=6.0.3",
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "typing-extensions>=4.13.2",
]
