[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dttb"
version = "0.3.2"
description = "DateTime TraceBack"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rocky Haotian Du", email = "rocky_d@yeah.net" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://pypi.org/project/dttb/"
Repository = "https://github.com/rocky-d/dttb"
Documentation = "https://rocky-d.github.io/dttb/"

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "typing-extensions>=4.13.2",
]
docs = ["mkdocs-material>=9.7.1", "mkdocstrings[python]>=0.26.1"]
